fixed bug in product on mobile

--- a/assets/src/style/pages.scss
+++ b/assets/src/style/pages.scss
@@ -295,7 +295,7 @@
 	}
 
 	&-preview {
-		width: 47%;
+		width: 45%;
 		padding-top: 5%;
 
 		@media (min-width: 768px) {
